[metadata]
description-file = README.md
version = 0.3.7+lineaje.1
maintainer = Lineaje DepFixer
maintainer_email = 221268890+Lineaje-DepFixer@users.noreply.github.com
url = https://github.com/lineaje-labs-gos/pbsa-bos-incidents
project_urls = Homepage = https://github.com/lineaje-labs-gos/pbsa-bos-incidents
	Repository = https://github.com/lineaje-labs-gos/pbsa-bos-incidents
	Tracker = https://github.com/lineaje-labs-gos/pbsa-bos-incidents/issues

[aliases]
test = pytest

[coverage:run]
omit = 
	tests/*
	.tox/*
	.eggs/*

[coverage:report]
include = bos_incidents*
ignore_errors = True
show_missing = True

[flake8]
ignore = E501,F401
exclude = 
	.git,
	__pycache__,
	docs/conf.py,
max-complexity = 10

